added in the foodiefun logos and assigned class to the signun button in the nav

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FoodieFun</title>
 
         <link href="css/index.css" rel="stylesheet">
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div class="nav">
-                <img src="#" alt="FoodieFun Logo">
+                <img id='logo' src="icons/white/1x/FoodieFun White.png" alt="FoodieFun Logo">
                 <nav>
                     <a href="#">Log in</a>
                     <a href="#">Sign Up</a>
@@ -22,11 +22,12 @@
             </div>
         </header>
 
+        <div class="container">
         <section class="headline">
             <div class="intro">
                 <p>Start recording your experiences</p>
             </div>
-            <img src="#" alt="FoodieFun Logo">
+            <img src="icons/white/1x/FoodieFun White.png" alt="FoodieFun Logo">
         </section>
         <section class="signup">
             <button>
@@ -36,5 +37,6 @@
                 <p>Arleady have an account? Click <a href="">here</a></p>
             </div>
         </section>
+        </div>
     </body>
 </html>
