--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img id='logo' src="icons/white/1x/FoodieFun White.png" alt="FoodieFun Logo">
                 <nav>
                     <a href="#">Log in</a>
-                    <a href="#">Sign Up</a>
+                    <div class="button"><a href="#">Sign Up</a></div>
                 </nav>
             </div>
         </header>
