created a container to contain content. Also added the footer of the page

--- a/index.html
+++ b/index.html
@@ -12,31 +12,36 @@
     </head>
 
     <body>
-        <header>
-            <div class="nav">
-                <img id='logo' src="icons/white/1x/FoodieFun White.png" alt="FoodieFun Logo">
-                <nav>
-                    <a href="#">Log in</a>
-                    <div class="button"><a href="#">Sign Up</a></div>
-                </nav>
-            </div>
-        </header>
-
         <div class="container">
-        <section class="headline">
-            <div class="intro">
-                <p>Start recording your experiences</p>
+            <header>
+                <div class="nav">
+                    <img id='logo' src="icons/white/1x/FoodieFun White.png" alt="FoodieFun Logo">
+                    <nav>
+                        <a href="#">Log in</a>
+                        <div class="button"><a href="#">Sign Up</a></div>
+                    </nav>
+                </div>
+            </header>
+
+            <div class="content">
+            <section class="headline">
+                <div class="intro">
+                    <p>Start recording your experiences</p>
+                </div>
+                <img src="icons/white/1x/FoodieFun White.png" alt="FoodieFun Logo">
+            </section>
+            <section class="signup">
+                <button>
+                    <h2>Become a Foodie!</h2>
+                </button>
+                <div class="login">
+                    <p>Arleady have an account? Click <a href="">here</a></p>
+                </div>
+            </section>
             </div>
-            <img src="icons/white/1x/FoodieFun White.png" alt="FoodieFun Logo">
-        </section>
-        <section class="signup">
-            <button>
-                <h2>Become a Foodie!</h2>
-            </button>
-            <div class="login">
-                <p>Arleady have an account? Click <a href="">here</a></p>
-            </div>
-        </section>
         </div>
+        <footer>
+            <a href="#">Terms of Service</a>
+        </footer>
     </body>
 </html>
