changed the button bracket to a div to make it easier to style. Also moved the footer links into a div to provide margins from the copyright.

--- a/index.html
+++ b/index.html
@@ -26,22 +26,26 @@
             <div class="content">
             <section class="headline">
                 <div class="intro">
-                    <p>Start recording your experiences</p>
+                    <p>Start recording your experiences with</p>
                 </div>
                 <img src="icons/white/1x/FoodieFun White.png" alt="FoodieFun Logo">
             </section>
             <section class="signup">
-                <button>
-                    <h2>Become a Foodie!</h2>
-                </button>
+                <div class="btn">
+                    <a href="#">Become a Foodie!</a>
+                </div>
                 <div class="login">
-                    <p>Arleady have an account? Click <a href="">here</a></p>
+                    <p>Arleady have an account? <a href="">Click here</a></p>
                 </div>
             </section>
             </div>
         </div>
         <footer>
-            <a href="#">Terms of Service</a>
+            <div class="links">
+                    <a href="#">Terms of Service</a><br>
+                    <a href="#">Privacy Policy</a>
+            </div>
+            <p>©2019 FoodieFun</p>
         </footer>
     </body>
 </html>
