--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
                 <div class="nav">
                     <img id='logo' src="icons/white/1x/FoodieFun White.png" alt="FoodieFun Logo">
                     <nav>
-                        <a href="#">Log in</a>
+                        <div class="otherbtn"><a href="#">About Us</a></div>
+                        <div class="otherbtn"><a href="#">Log in</a></div>
                         <div class="button"><a href="#">Sign Up</a></div>
                     </nav>
                 </div>
