made the foodie logo in the nav bar a link that directs you to the homepage

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <header>
                 <div class="nav">
-                    <img id='logo' src="icons/white/1x/FoodieFun White.png" alt="FoodieFun Logo">
+                    <a id='logo' href="index.html"><img href="index.html" src="icons/white/1x/FoodieFun White.png" alt="FoodieFun Logo"></a>
                     <nav>
                         <div class="otherbtn"><a href="about.html">About Us</a></div>
                         <div class="otherbtn"><a href="#">Log in</a></div>
