added the github buttons and profile pictures

--- a/about.html
+++ b/about.html
@@ -26,43 +26,75 @@
 
             <section class="profiles">
                 <div class="box box1">
-                    <h2>Raudel Flores</h2>
-                    <h3>Web UI Developer</h3>
+                    <div class="prof"><img src="profs/me.jpg" alt="Portrait of"></div>
+                    <div class="info">
+                        <h2>Raudel Flores</h2>
+                        <h3>Web UI Developer</h3>
+                        <div class="gitHub"><a href="https://github.com/raudelf">GitHub</a></div>
+                    </div>
                 </div>
 
                 <div class="box box2">
-                    <h2>Jasmin Dean</h2>
-                    <h3>Web UI Developer</h3>
+                    <div class="prof"><img src="profs/jasmine.jpg" alt="Portrait of"></div>
+                    <div class="info">
+                        <h2>Jasmin Dean</h2>
+                        <h3>Web UI Developer</h3>
+                        <div class="gitHub"><a href="https://github.com/Amaraleemusic">GitHub</a></div>
+                    </div>
                 </div>
 
                 <div class="box box1">
-                    <h2>Jorge Flores</h2>
-                    <h3>React Developer</h3>
+                    <div class="prof"><img src="profs/jorge.png" alt="Portrait of"></div>
+                    <div class="info">
+                        <h2>Jorge Flores</h2>
+                        <h3>React Developer</h3>
+                        <div class="gitHub"><a href="https://github.com/JorgeLuisFlores">GitHub</a></div>
+                    </div>
                 </div>
 
                 <div class="box box2">
-                    <h2>Thomas Dye</h2>
-                    <h3>iOS Engineer</h3>
+                    <div class="prof"><img src="profs/thomas.jpg" alt="Portrait of"></div>
+                    <div class="info">
+                        <h2>Thomas Dye</h2>
+                        <h3>iOS Engineer</h3>
+                        <div class="gitHub"><a href="https://github.com/thomasdye">GitHub</a></div>
+                    </div>
                 </div>
 
                 <div class="box box1">
-                    <h2>John Kouris</h2>
-                    <h3>iOS engineer</h3>
+                    <div class="prof"><img src="profs/john.png" alt="Portrait of"></div>
+                    <div class="info">
+                        <h2>John Kouris</h2>
+                        <h3>iOS engineer</h3>
+                        <div class="gitHub"><a href="https://github.com/jdkouris">GitHub</a></div>
+                    </div>
                 </div>
 
                 <div class="box box2">
-                    <h2>Dongwoo Pae</h2>
-                    <h3>iOS engineer</h3>
+                    <div class="prof"><img src="profs/dongwoo.png" alt="Portrait of"></div>
+                    <div class="info">
+                        <h2>Dongwoo Pae</h2>
+                        <h3>iOS engineer</h3>
+                        <div class="gitHub"><a href="https://github.com/bdu157">GitHub</a></div>
+                    </div>
                 </div>
 
                 <div class="box box1">
-                    <h2>Brandon Enders</h2>
-                    <h3>UX Designer</h3>
+                    <div class="prof"><img src="profs/brandon.jpg" alt="Portrait of"></div>
+                    <div class="info">
+                        <h2>Brandon Enders</h2>
+                        <h3>UX Designer</h3>
+                        <div class="gitHub"><a href="#">GitHub</a></div>
+                    </div>
                 </div>
 
-                <div class="box box1">
-                    <h2>Scott Bennett</h2>
-                    <h3>Project Lead</h3>
+                <div class="box box2">
+                    <div class="prof"><img src="profs/scott.jpg" alt="Portrait of"></div>
+                    <div class="info">
+                        <h2>Scott Bennett</h2>
+                        <h3>Project Lead</h3>
+                        <div class="gitHub"><a href="https://github.com/sttbtt">GitHub</a></div>
+                    </div>
                 </div>
             </section>
         </div>
